--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 	</div>
 
 	<div class="container_12">
-		<img src="img1.jpg" class ="grid_3"/>
-		<img src="img2.jpg" class ="grid_3"/>
-		<img src="img2.jpg" class ="grid_3"/>
-		<img src="img2.jpg" class ="grid_3"/>
+		<img src="img1.jpg" class ="grid_12"/>
+	<!-- 	<img src="img2.jpg" class ="grid_3"/>
+		<img src="img3.jpg" class ="grid_3"/>
+		<img src="img4.jpg" class ="grid_3"/> --> 
 	</div>
 	<div class="container_12">
 		<div class="grid_3">
@@ -58,6 +58,25 @@
 				Sports academies play a huge role in developing the overall game of an athlete. They look into each and every aspect of a sportsman that helps not only improve the physical aspect of the sport, but also the mental sie of things. Parents in India are opening up to the idea of enrollling their kids to a sports coaching institute.
 			</p>
 			<a href="#">Read More</a>
+		</div>
+	</div>
+	<div class="container_12">
+		<div class="grid_6">
+			<img src="image_cricket.jpg"/>
+		</div>
+		<div class="grid_6">
+			<section>
+				<h4>Basketball</h4>
+				<p>Basketball is a team sport in which two teams, most commonly of five players each, opposing one another on a rectangular court, compete with the primary objective of shooting a basketball</p>
+			</section>
+			<section>
+				<h4>Cricket</h4>
+				<p>Cricket is a bat-and-ball game played between two teams of eleven players on a field at the centre of which is a 20-metre (22-yard) pitch with a wicket at each</p>
+			</section>
+			<section>
+				<h4>Athletics</h4>
+				<p>Athletics is a collection of sporting events that involve competitive running, jumping, throwing, and walking. The most common types of athletics competitions are ...</p>
+			</section>
 		</div>
 	</div>
 	<div class="finish">
